--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
 			<!--Header, navigation-->
 			<nav>
 				<ul>
-					<li><a href="home.html">Home</a></li>
+					<li><a href="index.html">Home</a></li>
 					<li><a href="about.html">About</a></li>	
 					<li><a href="portfolio.html">Portfolio</a></li>	
 					<li  class="current"><a href="contact.html">Contact</a></li>	
