--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<!--Header, navigation-->
 			<nav>
 				<ul>
-					<li class="current"><a href="home.html">Home</a></li>
+					<li class="current"><a href="index.html">Home</a></li>
 					<li><a href="about.html">About</a></li>	
 					<li><a href="portfolio.html">Portfolio</a></li>	
 					<li><a href="contact.html">Contact</a></li>	
